// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`E2E: Issues Module Test Assign Issues 1`] = `
Array [
  Array [
    "Assigning issue 1 on protoEvangelion/gh to protoEvangelion",
  ],
  Array [
    "https://github.com/protoEvangelion/gh/issues/1",
  ],
]
`;

exports[`E2E: Issues Module Test Close Issue 1`] = `
Array [
  Array [
    "Closing issue 7 on protoEvangelion/gh",
  ],
  Array [
    "https://github.com/protoEvangelion/gh/issues/7",
  ],
  Array [
    "Closing issue 10 on protoEvangelion/gh",
  ],
  Array [
    "https://github.com/protoEvangelion/gh/issues/10",
  ],
]
`;

exports[`E2E: Issues Module Test Comment on Issues \`gh is 1 -c "comment"\` 1`] = `
"Adding comment on issue #1 on protoEvangelion/gh
https://github.com/protoEvangelion/gh/issues/1#issuecomment-000000001
"
`;

exports[`E2E: Issues Module Test Create a new issue \`gh is -N -t "Node GH rocks!" -L bug,question,test\` 1`] = `
"Creating a new issue on protoEvangelion/gh
https://github.com/protoEvangelion/gh/issues/88
{after-hook} gh is --browser  --user protoEvangelion --repo gh --number 88
"
`;

exports[`E2E: Issues Module Test List Issues Shorthand 1`] = `
Array [
  Array [
    "Listing open issues on protoEvangelion/gh",
  ],
  Array [
    "#99 notification @protoEvangelion (in 4 years)

#98 pr title2 @protoEvangelion (in 4 years)

#91 Node GH rocks! @protoEvangelion (in 4 years)

#42 test2 @protoEvangelion (in 4 years)

#40 My pr title @protoEvangelion (in 4 years)

#38 Node GH rocks! @protoEvangelion (in 4 years)",
  ],
]
`;

exports[`E2E: Issues Module Test Open Issue 1`] = `
Array [
  Array [
    "Opening issue 7 on protoEvangelion/gh",
  ],
  Array [
    "https://github.com/protoEvangelion/gh/issues/7",
  ],
  Array [
    "Opening issue 10 on protoEvangelion/gh",
  ],
  Array [
    "https://github.com/protoEvangelion/gh/issues/10",
  ],
]
`;

exports[`E2E: Issues Module Test Search Issues \`gh is -s hi\` 1`] = `
"Searching for hi in issues for protoEvangelion/gh

#72 hi @protoEvangelion (in 4 years)

#65 hi @protoEvangelion (in 4 years)

#63 hi @protoEvangelion (in 4 years)

#62 hi @protoEvangelion (in 4 years)

#61 hi @protoEvangelion (in 4 years)

#60 hi @protoEvangelion (in 4 years)

#19 hi @protoEvangelion (in 4 years)

#1 test1 @protoEvangelion (in 4 years)
"
`;
